--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde_derive = "1.0.210"
 tokio = { version = "1.40.0", features = ["full"] }
 warp = "0.3.7"
 rusqlite = { version = "0.32.0", features = ["bundled"] }
+http = "1.1.0"
