--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tokio = { version = "1.40.0", features = ["full"] }
 warp = "0.3.7"
 rusqlite = { version = "0.32.0", features = ["bundled"] }
 http = "1.1.0"
+rand = "0.8.5"
